# byteview

./: Cargo.toml  README.md
.github/workflows/: miri.yml  rust.yml  test.yml
benches/: bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
memory_bench/: Cargo.toml
memory_bench/src/: main.rs
src/: byteview.rs  lib.rs  strview.rs
